[package]
name = "anyv-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["O6lvl4"]
license = "MIT"
repository = "https://github.com/O6lvl4/anyv-core"
description = "Shared substrate for `*v` language toolchain managers (gv, rv, ...)."
keywords = ["version-manager", "toolchain", "uv", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
directories = "5"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["fs", "io-util", "rt", "macros"] }
